# civitai-python

./: .gitignore  .gitlab-ci.yml  .pypirc  .travis.yml  OPENAPI.md  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.devcontainer/: devcontainer.json
.openapi-generator/: FILES
civitai/: __init__.py  api_client.py  api_config.py  civitai.py  configuration.py  exceptions.py  image.py  rest.py
civitai_py/: __init__.py  api_client.py  configuration.py  rest.py
docs/: AIR.md  Assembly.md  AssetType.md  BaseModel.md  CallingConventions.md  ClearAssetRequest.md  ComfyJob.md  ComfyJobRequest.md  ConstructorInfo.md  ConsumptionApi.md  ConsumptionDetails.md  CopyAssetRequest.md  CoverageApi.md  CustomAttributeData.md  CustomAttributeNamedArgument.md  CustomAttributeTypedArgument.md  DeleteBlobRequest.md  EventAttributes.md  EventInfo.md  Exception.md  FieldAttributes.md  FieldInfo.md  FixedPriority.md  GenericParameterAttributes.md  GetBlobRequest.md  ImageEmbeddingJob.md  ImageEmbeddingJobRequest.md  ImageJobControlNet.md  ImageJobNetworkParams.md  ImageJobParams.md  ImageResourceTrainingJob.md  ImageResourceTrainingJobRequest.md  ImageTransformJob.md  ImageTransformJobRequest.md  ImageTransformer.md  Job.md  JobEvent.md  JobEventType.md  JobRequest.md  JobRequestPriority.md  (+62 more)
examples/: streamlit_app.py  text2img.ipynb
test/: test_air.py  test_assembly.py  test_asset_type.py  test_base_model.py  test_calling_conventions.py  test_clear_asset_request.py  test_comfy_job.py  test_comfy_job_request.py  test_constructor_info.py  test_consumption_api.py  test_consumption_details.py  test_copy_asset_request.py  test_coverage_api.py  test_create_image.py  (+92 more)
(+288 files in other folders)
