[tool.poetry]
name = "civitai-py"
version = "0.1.10"
description = "Civitai Python SDK"
authors = ["Civitai <hello@civitai.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/civitai/civitai-python"
keywords = ["Civitai Python SDK", "Civitai"]
include = ["civitai/py.typed"]
packages = [
    { include = "civitai" }
]

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = ">= 1.25.3"
pydantic = ">=2"
typing-extensions = ">=4.7.1"
httpx = ">=0.23.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"
mypy = "1.4.1"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = [
    "civitai",
    "tests",
]

# TODO: enable "strict" once all these individual checks are passing
# strict = true

# List from: https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
#disallow_untyped_calls = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
#no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
#warn_return_any = true